# Nagisa

./: .clang-format  CMakeLists.txt  README.md
examples/: simple.cpp
include/nagisa/: backend.h  base.hpp  debug.h  ir.hpp  irbuilder.h  lang.hpp  letlist.hpp  nagisa.h  nagisa.hpp  platform.h  semantics.h  transform.hpp
include/nagisa/math/: mat.hpp  vec.hpp
include/nagisa/math/detail/: functions.hpp  types.hpp  vfloat.hpp
src/: ctx.cpp
src/examples/: simple-expression.cpp
src/nagisa-rt/: debug.cpp  ir.cpp  irbuilder.cpp
src/nagisa-rt/backend/: ir.cpp  irbuilder.cpp  lang.cpp  llvm_backend.cpp
